# c-bindings

./: .gitignore  CMakeLists.txt  Doxyfile.in  LICENSE  LICENSE.rtf  README.md  annotated.html  block_8h_source.html  classes.html  coordinate_8h_source.html  dir_69b329ad395d66e31ba22e97399593f6.html  dir_d44c64559bbebec7f509842c48db8b23.html  doxygen.sh  doxygen_crawl.html  files.html  functions.html  functions_vars.html  index.html  level_8h_source.html  levelz_8h_source.html  matrix_8h_source.html  menudata.js  structBlock-members.html  structBlock.html  structBlockProperty-members.html  structBlockProperty.html  structCoordinate2D-members.html  structCoordinate2D.html  structCoordinate3D-members.html  structCoordinate3D.html  structCoordinateMatrix2D-members.html  structCoordinateMatrix2D.html  structCoordinateMatrix3D-members.html  structCoordinateMatrix3D.html  structLevel2D-members.html  structLevel2D.html  structLevel3D-members.html  structLevel3D.html  structLevelHeader-members.html  structLevelHeader.html  (+8 more)
.github/: release.json
.github/workflows/: build.yml  release.yml
docs/: Doxyfile.in
include/: levelz.h
include/levelz/: block.h  coordinate.h  level.h  matrix.h
search/: all_0.js  all_1.js  all_4.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  pages_0.js  pages_1.js  pages_2.js  pages_4.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_9.js
test/: CMakeLists.txt
test/src/: block.c  coordinate.c  level.c  levelz.c  matrix.c  test.h
